--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "bugs": {
     "url": "https://github.com/rafrex/detect-touch-events/issues"
   },
-  "homepage": "https://github.com/rafrex/detect-touch-events#readme"
+  "homepage": "https://github.com/rafrex/detect-touch-events#readme",
+  "devDependencies": {
+    "eslint": "^3.0.1",
+    "eslint-config-airbnb-base": "^4.0.0",
+    "eslint-plugin-import": "^1.10.2"
+  }
 }
