--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "homepage": "https://github.com/rafrex/detect-touch-events#readme",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0",
     "eslint": "^3.0.1",
     "eslint-config-airbnb-base": "^4.0.0",
     "eslint-plugin-import": "^1.10.2"
