Add detect keyword to package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "git+https://github.com/rafrex/detect-touch-events.git"
   },
   "keywords": [
+    "detect",
     "touch",
     "touch events",
     "touch device"
