--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Detect if the browser supports the touch events api",
   "main": "lib/index.js",
   "scripts": {
-    "build": "rm -rf lib && babel src --presets babel-preset-es2015 -d lib",
+    "build": "rm -rf lib && babel src -d lib --presets=env",
     "prepublish": "npm run build"
   },
   "files": [
@@ -28,8 +28,8 @@
   },
   "homepage": "https://github.com/rafrex/detect-touch-events#readme",
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-cli": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "eslint": "^3.0.1",
     "eslint-config-airbnb-base": "^4.0.0",
     "eslint-plugin-import": "^1.10.2"
